# stardb-exporter-genshin

./: Cargo.toml
src/: main.rs
